# OpenGLExperimentsMrDiver

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  run.sh
examples/0_hello_triangle/: 0_first_triangle.cpp  1_minimal_triangle.cpp  2_EBO_triangle.cpp  3_Exercise_2Triangles1VBO.cpp  4_Exercise_2Triangles2VBO.cpp  5_Exercise_Take2.cpp  CMakeLists.txt
examples/1_shaders/: 0_first_shader.cpp  CMakeLists.txt  fragment.frag  vertex.vert
examples/2_textures/: 0_first_texture.cpp  1_active_texture.cpp  CMakeLists.txt  fragment_active.frag  vertex.vert
examples/3_transformations/: 0_first_transformation.cpp  1_duplicate_transformation.cpp  2_spaces_transformation.cpp  3_cube_army.cpp  4_camera.cpp  CMakeLists.txt  fragment.frag  perspective_shader.vert  vertex.vert
include/: Camera.hpp  ElementBuffer.hpp  Projection.hpp  Shader.hpp  ShaderProgram.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
src/: CMakeLists.txt  Camera.cpp  ElementBuffer.cpp  Projection.cpp  Shader.cpp  ShaderProgram.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main.cpp  main2.cpp
